--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,20 @@
 ======================================================
+network-manager-applet-1.7.1
+Overview of changes since network-manager-applet-1.4.6
+======================================================
+
+This is a development snapshot of network-manager-applet 1.8 series.
+USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
+
+Notable changes included in this snapshot so far include:
+
+* Warn editor users if certificates have wrong SELinux labels
+* Added a PKCS#11 capable certificate chooser to EAP-TLS
+* Prevent the use from opening a file open dialog if they don't have
+    permission to edit connections (e.g. in the login manager session)
+    (CVE-2017-6590)
+
+======================================================
 network-manager-applet-1.4.6
 Overview of changes since network-manager-applet-1.4.4
 ======================================================
