Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -2127,7 +2127,7 @@ msgid ""
 "security page"
 msgstr ""
 "Especifica com la CAK (Clau d'associació connectivitat) s'obté per la MKA "
-"(Clau d'acord MACsec). Per al mode EAP, ompliu el paràmetres a la pàgina de "
+"(Clau d'acord MACsec). Per al mode EAP, ompliu els paràmetres a la pàgina de "
 "seguretat 802.1X "
 
 #: ../src/connection-editor/ce-page-macsec.ui.h:14
@@ -2390,7 +2390,7 @@ msgid ""
 "enabled or disabled."
 msgstr ""
 "Nombre d'esclats de demandes de tornar a unir-se al grup de multidifusió "
-"enviades després de que el port s'habilita o deshabilita."
+"enviades després que el port s'habilita o inhabilita."
 
 #: ../src/connection-editor/ce-page-team-port.ui.h:20
 msgid ""
@@ -3180,7 +3180,7 @@ msgid ""
 "Warning: the connection contains some properties not supported by the "
 "editor. They will be cleared upon save."
 msgstr ""
-"Avís: la connexió conté algunes propietats no suportades pel editor. "
+"Avís: la connexió conté algunes propietats no suportades per l'editor. "
 "Aquestes es suprimiran després de desar-se."
 
 #: ../src/connection-editor/nm-connection-editor.c:759
@@ -3601,12 +3601,12 @@ msgstr "No s'ha pogut carregar la interfície d'usuari per a la connexió IPv4."
 #: ../src/connection-editor/page-ip4.c:1321
 #, c-format
 msgid "IPv4 address “%s” invalid"
-msgstr "Adreça IPv4 «%s« no vàlida"
+msgstr "Adreça IPv4 «%s» no vàlida"
 
 #: ../src/connection-editor/page-ip4.c:1329
 #, c-format
 msgid "IPv4 address netmask “%s” invalid"
-msgstr "Adreça IPv4 no vàlida de la màscara de xarxa «%s«"
+msgstr "Adreça IPv4 no vàlida de la màscara de xarxa «%s»"
 
 #: ../src/connection-editor/page-ip4.c:1338
 #, c-format
@@ -3657,7 +3657,7 @@ msgstr "Servidor DNS IPv6 «%s» no vàlid"
 
 #: ../src/connection-editor/page-macsec.c:192
 msgid "Could not load MACsec user interface."
-msgstr "No s'ha pogut carregar la interfície d'usuari per MACsec"
+msgstr "No s'ha pogut carregar la interfície d'usuari per MACsec."
 
 #: ../src/connection-editor/page-macsec.c:331
 #, c-format
@@ -4093,7 +4093,7 @@ msgstr ""
 "els paràmetres que heu seleccionat. Si no es pot connectar o bé no podeu "
 "accedir als recursos de la xarxa, torneu a comprovar els paràmetres. Si "
 "voleu modificar els paràmetres de la connexió de banda ampla mòbil, trieu "
-"l'entrada «Connexions de xarxa» del menú Sistema → Preferències.."
+"l'entrada «Connexions de xarxa» del menú Sistema → Preferències."
 
 #: ../src/libnma/nma-mobile-wizard.c:261
 #: ../src/libnm-gtk/nm-mobile-wizard.c:262
@@ -4137,7 +4137,7 @@ msgstr "Seleccioneu el pla de facturació"
 #: ../src/libnma/nma-mobile-wizard.c:557
 #: ../src/libnm-gtk/nm-mobile-wizard.c:558
 msgid "My plan is not listed…"
-msgstr "El meu plan no és a la llista…"
+msgstr "El meu pla no és a la llista…"
 
 #: ../src/libnma/nma-mobile-wizard.c:710
 #: ../src/libnm-gtk/nm-mobile-wizard.c:711
@@ -4272,7 +4272,7 @@ msgstr "Certificat a %s"
 #: ../src/libnma/nma-cert-chooser-button.c:193
 #: ../src/libnma/nma-pkcs11-cert-chooser-dialog.c:183
 msgid "(Unknown)"
-msgstr "(Desconegud)"
+msgstr "(Desconegut)"
 
 #: ../src/libnma/nma-cert-chooser-button.c:215
 #: ../src/libnma/nma-cert-chooser-button.c:245
@@ -4619,11 +4619,11 @@ msgstr "error no definit a la seguretat 802.1X (wpa-eap)"
 
 #: ../src/wireless-security/eap-method.c:365
 msgid "no CA certificate selected"
-msgstr "No s'ha seleccionat cap certificat de CA"
+msgstr "no s'ha seleccionat cap certificat de CA"
 
 #: ../src/wireless-security/eap-method.c:370
 msgid "selected CA certificate file does not exist"
-msgstr "El fitxers de certificat CA no existeix"
+msgstr "els fitxers de certificat CA no existeix"
 
 #: ../src/wireless-security/eap-method-fast.c:71
 msgid "missing EAP-FAST PAC file"
@@ -4716,7 +4716,7 @@ msgstr "Versió del _PEAP:"
 #: ../src/wireless-security/eap-method-tls.ui.h:3
 #: ../src/wireless-security/eap-method-ttls.ui.h:4
 msgid "Suffix of the server certificate name."
-msgstr "Suffix del nom del certificat del servidor"
+msgstr "Suffix del nom del certificat del servidor."
 
 #: ../src/wireless-security/eap-method-peap.ui.h:9
 #: ../src/wireless-security/eap-method-tls.ui.h:4
