Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -4333,7 +4333,7 @@ msgstr "Desa la contrasenya només per a aquest usuari"
 
 #: ../src/libnma/nma-ui-utils.c:50 ../src/libnm-gtk/nm-ui-utils.c:616
 msgid "Store the password for all users"
-msgstr "Desa la contrasenya per tots els usuaris"
+msgstr "Desa la contrasenya per a tots els usuaris"
 
 #: ../src/libnma/nma-ui-utils.c:51 ../src/libnm-gtk/nm-ui-utils.c:617
 msgid "Ask for this password every time"
