--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,17 @@
 ======================================================
+network-manager-applet-1.8.6
+Overview of changes since network-manager-applet-1.8.4
+======================================================
+
+This is a new stable release of network-manager-applet.  Notable changes include:
+
+* Added an option to build with Meson build system.
+* Wi-Fi client connections now support setting a band and a channel too.
+* Setting IPv6 address generation mode is now supported.
+* Fixed a possible crash after editing Wi-Fi connections.
+* Updated Danish, Dutch and German translations.
+
+======================================================
 network-manager-applet-1.8.4
 Overview of changes since network-manager-applet-1.8.2
 ======================================================
