po: translations from the Red Hat translators

--- a/po/de.po
+++ b/po/de.po
@@ -17,21 +17,21 @@
 # Hedda Peters <hpeters@redhat.com>, 2012.
 # Christian Kirbach <Christian.Kirbach@gmail.com>, 2009-2013, 2013.
 # Bernd Homuth <dev@hmt.im>, 2015.
-#
+# lrintel <lrintel@redhat.com>, 2017. #zanata
 msgid ""
 msgstr ""
-"Project-Id-Version: network-manager-applet master\n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-12 11:18+0100\n"
-"PO-Revision-Date: 2017-10-10 20:06+0200\n"
-"Last-Translator: Mario Blättermann <mario.blaettermann@gmail.com>\n"
+"PO-Revision-Date: 2017-11-07 06:45+0000\n"
+"Last-Translator: Copied by Zanata <copied-by-zanata@zanata.org>\n"
 "Language-Team: Deutsch <gnome-de@gnome.org>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.3\n"
+"X-Generator: Zanata 4.3.2\n"
 
 #: ../nm-applet.desktop.in.h:1 ../src/applet.c:3191
 msgid "Network"
@@ -266,7 +266,6 @@ msgstr "Hinzufügen/Aktivierung der Verbindung schlug fehl"
 msgid "Unknown error"
 msgstr "Unbekannter Fehler"
 
-#
 #: ../src/applet.c:397 ../src/applet.c:486 ../src/applet-device-wifi.c:539
 #: ../src/applet-device-wifi.c:1391 ../src/applet-device-wifi.c:1414
 msgid "Connection failure"
@@ -280,7 +279,6 @@ msgstr "Trennen des Gerätes schlug fehl"
 msgid "Disconnect failure"
 msgstr "Trennen schlug fehl"
 
-#
 #: ../src/applet.c:481
 msgid "Connection activation failed"
 msgstr "Aktivierung der Verbindung fehlgeschlagen"
@@ -410,7 +408,6 @@ msgstr "Die VPN-Verbindung wurde erfolgreich eingerichtet.\n"
 msgid "VPN Login Message"
 msgstr "VPN-Anmeldemitteilung"
 
-#
 #: ../src/applet.c:959 ../src/applet.c:999
 msgid "VPN Connection Failed"
 msgstr "VPN-Verbindung fehlgeschlagen"
@@ -1115,7 +1112,6 @@ msgstr "Geben Sie den neuen PIN-Code erneut ein:"
 msgid "Show PIN/PUK codes"
 msgstr "PIN/PUK-Codes anzeigen"
 
-#
 #: ../src/applet-vpn-request.c:201
 #, fuzzy
 msgid "Connection had no VPN setting"
@@ -2162,9 +2158,8 @@ msgid "EUI64"
 msgstr ""
 
 #: ../src/connection-editor/ce-page-ip6.ui.h:10
-#, fuzzy
 msgid "Stable privacy"
-msgstr "Stabil"
+msgstr ""
 
 #: ../src/connection-editor/ce-page-ip6.ui.h:17
 msgid ""
@@ -3191,7 +3186,6 @@ msgstr ""
 msgid "Could not create new connection"
 msgstr "Neue Verbindung konnte nicht erstellt werden"
 
-#
 #: ../src/connection-editor/connection-helpers.c:720
 msgid "Connection delete failed"
 msgstr "Löschen der Verbindung fehlgeschlagen"
@@ -3247,7 +3241,6 @@ msgstr "Fehlender Verbindungsname"
 msgid "Editor initializing…"
 msgstr "Editor wird initialisiert …"
 
-#
 #: ../src/connection-editor/nm-connection-editor.c:360
 #: ../src/connection-editor/nm-connection-list.c:443
 msgid "Connection cannot be modified"
@@ -3307,7 +3300,6 @@ msgstr ""
 msgid "Error initializing editor"
 msgstr "Fehler beim Initialisieren des Editors"
 
-#
 #: ../src/connection-editor/nm-connection-editor.c:1157
 msgid "Connection add failed"
 msgstr "Hinzufügen der Verbindung fehlgeschlagen"
@@ -3397,7 +3389,6 @@ msgid_plural "%d years ago"
 msgstr[0] "vor %d Jahr"
 msgstr[1] "vor %d Jahren"
 
-#
 #: ../src/connection-editor/nm-connection-list.c:445
 msgid "Connection cannot be deleted"
 msgstr "Verbindung kann nicht gelöscht werden"
@@ -3968,7 +3959,6 @@ msgstr "VPN-Plugin für »%s« konnte nicht gefunden werden."
 msgid "Could not load editor VPN plugin for “%s” (%s)."
 msgstr "Editor-VPN-Plugin für »%s« konnte nicht gefunden werden (%s)."
 
-#
 #: ../src/connection-editor/page-vpn.c:123
 msgid "unknown failure"
 msgstr "Fehlgeschlagen, Grund unbekannt"
@@ -3978,7 +3968,6 @@ msgstr "Fehlgeschlagen, Grund unbekannt"
 msgid "VPN connection %d"
 msgstr "VPN-Verbindung %d"
 
-#
 #: ../src/connection-editor/page-vpn.c:211
 msgid "Choose a VPN Connection Type"
 msgstr "VPN-Verbindungstyp wählen"
