--- a/po/it.po
+++ b/po/it.po
@@ -11,14 +11,14 @@
 # Francesco Marletta <francesco.marletta@tiscali.it>, 2004, 2005, 2006, 2007, 2008, 2009, 2010.
 # Gianvito Cavasoli <gianvito@gmx.it>, 2011.
 # Milo Casagrande <milo@milo.name>, 2011, 2012, 2013, 2014, 2015, 2016, 2017.
-#
+# lrintel <lrintel@redhat.com>, 2017. #zanata
 msgid ""
 msgstr ""
-"Project-Id-Version: network-manager-applet\n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-12 11:18+0100\n"
-"PO-Revision-Date: 2017-09-10 15:29+0200\n"
-"Last-Translator: Milo Casagrande <milo@milo.name>\n"
+"PO-Revision-Date: 2017-11-07 06:45+0000\n"
+"Last-Translator: Copied by Zanata <copied-by-zanata@zanata.org>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
@@ -26,7 +26,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
 "X-Launchpad-Export-Date: 2012-03-09 08:20+0000\n"
-"X-Generator: Poedit 2.0.1\n"
+"X-Generator: Zanata 4.3.2\n"
 
 #: ../nm-applet.desktop.in.h:1 ../src/applet.c:3191
 msgid "Network"
@@ -521,7 +521,6 @@ msgstr "Attualmente connessi a «%s»."
 msgid "Disconnected"
 msgstr "Disconnessi"
 
-#
 #: ../src/applet.c:2248
 msgid "The network connection has been disconnected."
 msgstr "La connessione di rete è stata terminata."
@@ -1116,7 +1115,7 @@ msgstr "La connessione non può essere eliminata"
 #: ../src/applet-vpn-request.c:251
 #, fuzzy, c-format
 msgid "Failed to write connection to VPN UI: %s (%d)"
-msgstr "Creazione connessione DUN non riuscita: %s"
+msgstr "Attivazione della connessione non riuscita"
 
 #: ../src/applet-vpn-request.c:259
 msgid "Failed to write connection to VPN UI: incomplete write"
@@ -2157,9 +2156,8 @@ msgid "EUI64"
 msgstr ""
 
 #: ../src/connection-editor/ce-page-ip6.ui.h:10
-#, fuzzy
 msgid "Stable privacy"
-msgstr "Stabile"
+msgstr ""
 
 #: ../src/connection-editor/ce-page-ip6.ui.h:17
 msgid ""
@@ -4056,7 +4054,6 @@ msgstr "WEP dinamico (802.1X)"
 # fornite dai prodotti. I WPA(2)-Personal utilizzeranno il metodo PSK a
 # chiave condivisa mentre i WPA(2)-Enterprise utilizzeranno un server
 # di autenticazione.
-#
 #: ../src/connection-editor/page-wifi-security.c:407
 #: ../src/libnma/nma-wifi-dialog.c:976 ../src/libnm-gtk/nm-wifi-dialog.c:975
 msgid "WPA & WPA2 Personal"
@@ -5016,429 +5013,3 @@ msgstr ""
 #: ../src/wireless-security/ws-wpa-psk.ui.h:2
 msgid "_Type:"
 msgstr "_Tipo:"
-
-#~ msgid "DSL"
-#~ msgstr "DSL"
-
-#~ msgid "Mode"
-#~ msgstr "Modalità"
-
-#~ msgid "MTU"
-#~ msgstr "MTU"
-
-#~ msgid "no file selected"
-#~ msgstr "nessun file selezionato"
-
-#~ msgid "file “%s” does not exist"
-#~ msgstr "il file «%s» non esiste"
-
-#~ msgid "unspecified error validating eap-method file"
-#~ msgstr "errore non specificato nel validare il file eap-method"
-
-#~ msgid "invalid EAP-PEAP CA certificate: %s"
-#~ msgstr "certificato CA EAP-PEAP non valido: %s"
-
-#~ msgid "invalid EAP-PEAP CA certificate: no certificate specified"
-#~ msgstr "certificato CA EAP-PEAP non valido: nessun certificato specificato"
-
-# (ndt) titolo finestra
-#~ msgid "Choose a Certificate Authority certificate"
-#~ msgstr "Scelta certificato di Autorità di Certificazione"
-
-#~ msgid "C_A certificate:"
-#~ msgstr "Certificato della C_A:"
-
-#~ msgid "invalid EAP-TTLS CA certificate: %s"
-#~ msgstr "certificato CA EAP-TTLS non valido: %s"
-
-#~ msgid "invalid EAP-TTLS CA certificate: no certificate specified"
-#~ msgstr "certificato CA EAP-TTLS non valido: nessun certificato specificato"
-
-#~ msgid ""
-#~ "\n"
-#~ "The VPN connection “%s” disconnected because the VPN service stopped."
-#~ msgstr ""
-#~ "\n"
-#~ "La connessione VPN «%s» si è chiusa perché il servizio VPN è stato "
-#~ "fermato."
-
-# [NdT] certo che l'originare era proprio brutto
-#~ msgid ""
-#~ "\n"
-#~ "The VPN connection “%s” disconnected."
-#~ msgstr ""
-#~ "\n"
-#~ "La connessione VPN «%s» si è chiusa."
-
-#~ msgid "invalid EAP-TLS CA certificate: %s"
-#~ msgstr "certificato CA EAP-TLS non valido: %s"
-
-#~ msgid "invalid EAP-TLS CA certificate: no certificate specified"
-#~ msgstr "certificato CA EAP-TLS non valido: nessun certificato specificato"
-
-#~ msgid "invalid EAP-TLS password: missing"
-#~ msgstr "password EAP-TLS non valida: manca la password"
-
-#~ msgid "invalid EAP-TLS private-key: %s"
-#~ msgstr "chiave privata EAP-TLS non valida: %s"
-
-#~ msgid "invalid EAP-TLS user-certificate: %s"
-#~ msgstr "certificato utente EAP-TLS non valido: %s"
-
-#~ msgid "Unencrypted private keys are insecure"
-#~ msgstr "Le chiavi private non cifrate sono insicure"
-
-#~ msgid ""
-#~ "The selected private key does not appear to be protected by a password. "
-#~ "This could allow your security credentials to be compromised. Please "
-#~ "select a password-protected private key.\n"
-#~ "\n"
-#~ "(You can password-protect your private key with openssl)"
-#~ msgstr ""
-#~ "La chiave privata selezionata non sembra essere protetta da una password. "
-#~ "Ciò potrebbe compromettere le proprie credenziali di sicurezza. "
-#~ "Selezionare una chiave privata protetta con password.\n"
-#~ "\n"
-#~ "(È possibile proteggere con password la propria chiave privata usando "
-#~ "openssl)"
-
-# (ndt) titolo finestra
-#~ msgid "Choose your private key"
-#~ msgstr "Scelta chiave privata"
-
-#~ msgid "New Mobile Broadband connection..."
-#~ msgstr "Nuova connessione a banda larga mobile..."
-
-#~ msgid "_Connect to Hidden Wi-Fi Network..."
-#~ msgstr "_Connetti a rete Wi-Fi nascosta..."
-
-#~ msgid "Create _New Wi-Fi Network..."
-#~ msgstr "Crea _nuova rete Wi-Fi..."
-
-#~ msgid " "
-#~ msgstr " "
-
-#~ msgid "0"
-#~ msgstr "0"
-
-#~ msgid "1"
-#~ msgstr "1"
-
-#~ msgid "2"
-#~ msgstr "2"
-
-#~ msgid "3"
-#~ msgstr "3"
-
-#~ msgid "4"
-#~ msgstr "4"
-
-#~ msgid "5"
-#~ msgstr "5"
-
-#~ msgid "6"
-#~ msgstr "6"
-
-#~ msgid "7"
-#~ msgstr "7"
-
-#~ msgid "15"
-#~ msgstr "15"
-
-#~ msgid "Aut_onegotiate"
-#~ msgstr "Aut_o-negoziazione"
-
-#~ msgid "FirewallD is not running."
-#~ msgstr "FirewallD non è in esecuzione."
-
-#~ msgid "New..."
-#~ msgstr "Nuova..."
-
-#~ msgid "NetworkManager for GNOME"
-#~ msgstr "NetworkManager per GNOME"
-
-#~ msgid "_Disconnect VPN"
-#~ msgstr "_Disconnetti VPN"
-
-#~ msgid "_Help"
-#~ msgstr "A_iuto"
-
-#~ msgid "bdaddr"
-#~ msgstr "bdaddr"
-
-#~ msgid "Infrastructure"
-#~ msgstr "Infrastruttura"
-
-#~ msgid "Enable WiMA_X Mobile Broadband"
-#~ msgstr "Abilita rete a banda larga mobile WiMA_X"
-
-#~ msgid "You are now connected to the bonded network."
-#~ msgstr "Attualmente connessi alla rete aggregata."
-
-#~ msgid "Preparing bond connection '%s'..."
-#~ msgstr "Preparazione della connessione aggregata «%s»..."
-
-#~ msgid "Configuring bond connection '%s'..."
-#~ msgstr "Configurazione della connessione aggregata «%s»..."
-
-#~ msgid "User authentication required for bond connection '%s'..."
-#~ msgstr ""
-#~ "Richiesta autenticazione utente per la connessione aggregata «%s»..."
-
-#~ msgid "Requesting address for '%s'..."
-#~ msgstr "Richiesta di un indirizzo per «%s»..."
-
-#~ msgid "Bond connection '%s' active"
-#~ msgstr "Connessione aggregata «%s» attiva"
-
-#~ msgid "You are now connected to the bridged network."
-#~ msgstr "Attualmente connessi alla rete bridged."
-
-#~ msgid "Preparing bridge connection '%s'..."
-#~ msgstr "Preparazione della connessione bridge «%s»..."
-
-#~ msgid "Configuring bridge connection '%s'..."
-#~ msgstr "Configurazione della connessione bridge «%s»..."
-
-#~ msgid "User authentication required for bridge connection '%s'..."
-#~ msgstr "Richiesta autenticazione utente per la connessione bridge «%s»..."
-
-#~ msgid "Bridge connection '%s' active"
-#~ msgstr "Connessione bridge «%s» attiva"
-
-#~ msgid "New Mobile Broadband (CDMA) connection..."
-#~ msgstr "Nuova connessione a banda larga mobile (CDMA)..."
-
-#~ msgid "You are now connected to the CDMA network."
-#~ msgstr "Attualmente connessi alla rete CDMA."
-
-#~ msgid "CDMA network."
-#~ msgstr "Rete CDMA"
-
-#~ msgid "New Mobile Broadband (GSM) connection..."
-#~ msgstr "Nuova connessione a banda larga mobile (GSM)..."
-
-#~ msgid "You are now connected to the GSM network."
-#~ msgstr "Attualmente connessi alla rete GSM."
-
-#~ msgid "GSM network."
-#~ msgstr "Rete GSM"
-
-#~ msgid "Auto InfiniBand"
-#~ msgstr "InfiniBand automatica"
-
-#~ msgid "InfiniBand Networks (%s)"
-#~ msgstr "Reti InfiniBand (%s)"
-
-#~ msgid "InfiniBand Network (%s)"
-#~ msgstr "Rete InfiniBand (%s)"
-
-#~ msgid "InfiniBand Networks"
-#~ msgstr "Reti InfiniBand"
-
-#~ msgid "InfiniBand Network"
-#~ msgstr "Rete InfiniBand"
-
-#~ msgid "You are now connected to the InfiniBand network."
-#~ msgstr "Attualmente connessi alla rete InfiniBand."
-
-#~ msgid "Preparing InfiniBand connection '%s'..."
-#~ msgstr "Preparazione della connessione InfiniBand «%s»..."
-
-#~ msgid "Configuring InfiniBand connection '%s'..."
-#~ msgstr "Configurazione della connessione InfiniBand «%s»..."
-
-#~ msgid "User authentication required for InfiniBand connection '%s'..."
-#~ msgstr ""
-#~ "Richiesta autenticazione utente per la connessione InfiniBand «%s»..."
-
-#~ msgid "InfiniBand connection '%s' active"
-#~ msgstr "Connessione InfiniBand «%s» attiva"
-
-#~ msgid "You are now connected to the teamed network."
-#~ msgstr "Attualmente connessi alla rete team."
-
-#~ msgid "Preparing team connection '%s'..."
-#~ msgstr "Preparazione della connessione team «%s»..."
-
-#~ msgid "Configuring team connection '%s'..."
-#~ msgstr "Configurazione della connessione team «%s»..."
-
-#~ msgid "User authentication required for team connection '%s'..."
-#~ msgstr "Richiesta autenticazione utente per la connessione team «%s»..."
-
-#~ msgid "Team connection '%s' active"
-#~ msgstr "Connessione team «%s» attiva"
-
-#~ msgid "You are now connected to the VLAN."
-#~ msgstr "Attualmente connessi alla VLAN."
-
-#~ msgid "Preparing VLAN connection '%s'..."
-#~ msgstr "Avvio della connessione VLAN «%s»..."
-
-#~ msgid "Configuring VLAN connection '%s'..."
-#~ msgstr "Avvio della connessione VLAN «%s»..."
-
-#~ msgid "User authentication required for VLAN connection '%s'..."
-#~ msgstr "Richiesta autenticazione utente per la connessione VLAN «%s»..."
-
-#~ msgid "VLAN connection '%s' active"
-#~ msgstr "Connessione VLAN «%s» attiva"
-
-#~ msgid "WiMAX Mobile Broadband (%s)"
-#~ msgstr "Banda larga mobile WiMAX (%s)"
-
-#~ msgid "WiMAX Mobile Broadband"
-#~ msgstr "Banda larga mobile WiMAX"
-
-#~ msgid "WiMAX is disabled"
-#~ msgstr "WiMAX disabilitata"
-
-#~ msgid "WiMAX is disabled by hardware switch"
-#~ msgstr "WiMAX disabilitata da interruttore hardware"
-
-#~ msgid "You are now connected to the WiMAX network."
-#~ msgstr "Attualmente connessi alla rete WiMAX."
-
-#~ msgid "%d dB"
-#~ msgstr "%d dB"
-
-#~ msgctxt "WiMAX CINR"
-#~ msgid "unknown"
-#~ msgstr "sconosciuto"
-
-#~ msgctxt "WiMAX Base Station ID"
-#~ msgid "unknown"
-#~ msgstr "sconosciuto"
-
-#~ msgid "WiMAX (%s)"
-#~ msgstr "WiMAX (%s)"
-
-#~ msgid "CINR:"
-#~ msgstr "CINR:"
-
-#~ msgid "BSID:"
-#~ msgstr "BSID:"
-
-#~ msgid "_Device MAC address:"
-#~ msgstr "Indirizzo _MAC dispositivo:"
-
-#~ msgid "Any"
-#~ msgstr "Qualunque"
-
-#~ msgid "3G (UMTS/HSPA)"
-#~ msgstr "3G (UMTS/HSPA)"
-
-#~ msgid "2G (GPRS/EDGE)"
-#~ msgstr "2G (GPRS/EDGE)"
-
-#~ msgid "Prefer 3G (UMTS/HSPA)"
-#~ msgstr "Preferire 3G (UMTS/HSPA)"
-
-#~ msgid "Prefer 2G (GPRS/EDGE)"
-#~ msgstr "Preferire 2G (GPRS/EDGE)"
-
-#~ msgid "Prefer 4G (LTE)"
-#~ msgstr "Preferire 4G (LTE)"
-
-#~ msgid "Use only 4G (LTE)"
-#~ msgstr "Usare solo 4G (LTE)"
-
-#~ msgid "I_mport team configuration from a file..."
-#~ msgstr "I_mporta configurazione team da file..."
-
-#~ msgid "WiMAX"
-#~ msgstr "WiMAX"
-
-#~ msgid "Error saving connection"
-#~ msgstr "Errore nel salvare la connessione"
-
-#~ msgid "The property '%s' / '%s' is invalid: %d"
-#~ msgstr "La proprietà «%s» / «%s» non è valida: %d"
-
-#~ msgid ""
-#~ "Bluetooth configuration not possible (failed to connect to D-Bus: (%s) "
-#~ "%s)."
-#~ msgstr ""
-#~ "Impossibile eseguire la configurazione Bluetooth (connessione a D-Bus non "
-#~ "riuscita: (%s) %s)."
-
-#~ msgid ""
-#~ "Bluetooth configuration not possible (error finding NetworkManager: (%s) "
-#~ "%s)."
-#~ msgstr ""
-#~ "Impossibile eseguire la configurazione Bluetooth (errore durante la "
-#~ "ricerca di NetworkManager: (%s) %s)."
-
-#~ msgid "Use your mobile phone as a network device (PAN/NAP)"
-#~ msgstr "Usa il telefono cellulare come dispositivo di rete (PAN/NAP)"
-
-#~ msgid "Access the Internet using your mobile phone (DUN)"
-#~ msgstr "Accesso a Internet usando il telefono cellulare (DUN)"
-
-#~ msgid "Error: %s"
-#~ msgstr "Errore: %s"
-
-#~ msgid "Your phone is now ready to use!"
-#~ msgstr "Il telefono è pronto all'uso."
-
-#~ msgid "Mobile wizard was canceled"
-#~ msgstr "L'assistente alla connessione mobile è stato annullato"
-
-#~ msgid "Unknown phone device type (not GSM or CDMA)"
-#~ msgstr "Tipo di telefono sconosciuto (né GSM né CDMA)"
-
-#~ msgid "failed to connect to the phone."
-#~ msgstr "connessione al telefono non riuscita."
-
-#~ msgid "error getting bus connection"
-#~ msgstr "errore nel recuperare il bus della connessione"
-
-#~ msgid "unexpectedly disconnected from the phone."
-#~ msgstr "disconnessione inattesa dal telefono."
-
-#~ msgid "timed out detecting phone details."
-#~ msgstr "tempo esaurito nel rilevare i dettagli del telefono."
-
-#~ msgid "Detecting phone configuration..."
-#~ msgstr "Rilevazione configurazione telefono..."
-
-#~ msgid ""
-#~ "The default Bluetooth adapter must be enabled before setting up a Dial-Up-"
-#~ "Networking connection."
-#~ msgstr ""
-#~ "L'adattatore Bluetooth predefinito deve essere abilitato prima di poter "
-#~ "impostare una connessione Dial-Up-Networking."
-
-#~ msgid "Failed to create PAN connection: %s"
-#~ msgstr "Creazione connessione PAN non riuscita: %s"
-
-#~ msgid "%s Network"
-#~ msgstr "Rete %s"
-
-#~ msgid "Primary DNS:"
-#~ msgstr "DNS primario:"
-
-#~ msgid "Secondary DNS:"
-#~ msgstr "DNS secondario:"
-
-#~ msgid "Ternary DNS:"
-#~ msgstr "DNS terziario:"
-
-#~ msgid "_Save..."
-#~ msgstr "_Salva..."
-
-#~ msgid "_Edit..."
-#~ msgstr "_Modifica..."
-
-#~ msgid "_Delete..."
-#~ msgstr "_Elimina..."
-
-#~ msgid "Automatic (PPP)"
-#~ msgstr "Automatico (PPP)"
-
-#~ msgid "Automatic (PPP) addresses only"
-#~ msgstr "Automatico (PPP) solo indirizzi"
-
-#~ msgid "unknown modem type."
-#~ msgstr "tipo di modem sconosciuto."
