--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,15 @@
 ======================================================
+network-manager-applet-1.8.8
+Overview of changes since network-manager-applet-1.8.6
+======================================================
+
+This is a new stable release of network-manager-applet.  Notable changes include:
+
+* Fix loading of secrets when editing a VPN connection.
+* Fixes to the experimental Meson support.
+* Update to then Japanese, Indonesian, Polish, Croatian and Danish translations.
+
+======================================================
 network-manager-applet-1.8.6
 Overview of changes since network-manager-applet-1.8.4
 ======================================================
