--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,16 @@
 ======================================================
+network-manager-applet-1.8.10
+Overview of changes since network-manager-applet-1.8.8
+======================================================
+
+This is a new stable release of network-manager-applet.  Notable changes include:
+
+* Don't request secrets for Bluetooth connections. Works around a bug in GNOME
+  Shell secret agent.
+* Fix a bug that caused invalid connections to be non-editable (and thus not
+  fixable).
+
+======================================================
 network-manager-applet-1.8.8
 Overview of changes since network-manager-applet-1.8.6
 ======================================================
