--- a/po/cs.po
+++ b/po/cs.po
@@ -15,8 +15,8 @@ msgstr ""
 "Project-Id-Version: network-manager-applet\n"
 "Report-Msgid-Bugs-To: https://bugzilla.gnome.org/enter_bug.cgi?"
 "product=NetworkManager&keywords=I18N+L10N&component=nm-applet\n"
-"POT-Creation-Date: 2018-04-13 19:31+0000\n"
-"PO-Revision-Date: 2018-03-07 20:30+0100\n"
+"POT-Creation-Date: 2018-04-24 16:47+0000\n"
+"PO-Revision-Date: 2018-04-26 18:02+0200\n"
 "Last-Translator: Zdeněk Hataš <zdenek.hatas@gmail.com>\n"
 "Language-Team: čeština <gnome-cs-list@gnome.org>\n"
 "Language: cs\n"
@@ -1858,23 +1858,19 @@ msgstr ""
 
 #: ../src/connection-editor/ce-page-general.ui.h:2
 msgid "Yes"
-msgstr ""
+msgstr "Ano"
 
 #: ../src/connection-editor/ce-page-general.ui.h:3
-#, fuzzy
-#| msgid "None"
 msgid "No"
-msgstr "Žádné"
+msgstr "Ne"
 
 #: ../src/connection-editor/ce-page-general.ui.h:4
 msgid "All _users may connect to this network"
 msgstr "Do této sítě se smí připojit všichni _uživatelé"
 
 #: ../src/connection-editor/ce-page-general.ui.h:5
-#, fuzzy
-#| msgid "Automatically connect to _VPN when using this connection"
 msgid "Automatically connect to _VPN"
-msgstr "Automaticky připojit do _VPN při použití tohoto připojení"
+msgstr "Automaticky připojit do _VPN"
 
 #: ../src/connection-editor/ce-page-general.ui.h:6
 msgid "Firewall _zone"
@@ -1891,12 +1887,14 @@ msgid ""
 "“No”) to indicate to applications, or “Automatic” to use a default value "
 "based on the connection type and other heuristics."
 msgstr ""
+"NetworkManager dává vědět aplikacím, když je připojení měřeno, a tudíž je "
+"třeba omezit využití dat. Zvolte hodnotu „Ano“ nebo „Ne“, jestli to má "
+"aplikacím sdělovat, čí nikoliv, případně zvolte „Automaticky“, aby se použila "
+"výchozí hodnota založená na typu připojení a dalších heuristikách."
 
 #: ../src/connection-editor/ce-page-general.ui.h:9
-#, fuzzy
-#| msgid "Ig_nore automatically obtained routes"
 msgid "Connect _automatically with priority"
-msgstr "Ig_norovat automaticky získané trasy"
+msgstr "Připojit _automaticky s prioritou"
 
 #: ../src/connection-editor/ce-page-general.ui.h:10
 msgid ""
