Update Polish translation

--- a/po/pl.po
+++ b/po/pl.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: network-manager-applet\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-28 19:37+0200\n"
-"PO-Revision-Date: 2018-03-28 19:38+0200\n"
+"POT-Creation-Date: 2018-05-08 20:11+0200\n"
+"PO-Revision-Date: 2018-05-08 20:12+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <community-poland@mozilla.org>\n"
 "Language: pl\n"
@@ -1719,6 +1719,22 @@ msgstr "Dowolna nazwa do przydzielenia nowo utworzonemu interfejsowi PPP."
 msgid "The interface on which the PPP connection will be established."
 msgstr "Interfejs, na którym nawiązać połączenie PPP."
 
+#: ../src/connection-editor/ce-page-dsl.ui.h:12
+msgid "C_laim interface"
+msgstr "_Przejmij interfejs"
+
+#: ../src/connection-editor/ce-page-dsl.ui.h:13
+msgid ""
+"If selected, the connection will take exclusive control of the interface and "
+"it won’t be possible to activate another connection on it. Note that the "
+"option can only be used for Ethernet interfaces. nm-applet is able to "
+"activate the connection only if this option is selected."
+msgstr ""
+"Po zaznaczeniu połączenie całkowicie przejmie kontrolę nad interfejsem i nie "
+"będzie można aktywować na nim innego połączenia. Proszę zauważyć, że tej "
+"opcji można używać tylko dla interfejsów Ethernet. nm-applet może aktywować "
+"połączenie tylko, jeśli ta opcja jest zaznaczona."
+
 #: ../src/connection-editor/ce-page-ethernet.ui.h:1
 #: ../src/connection-editor/ce-page-general.ui.h:1
 #: ../src/connection-editor/ce-page-ip4.ui.h:1
@@ -3072,7 +3088,7 @@ msgid "Bluetooth"
 msgstr "Bluetooth"
 
 #: ../src/connection-editor/connection-helpers.c:115
-#: ../src/connection-editor/page-dsl.c:201
+#: ../src/connection-editor/page-dsl.c:220
 msgid "DSL/PPPoE"
 msgstr "DSL/PPPoE"
 
@@ -3548,15 +3564,15 @@ msgstr "DCB"
 msgid "Could not load DCB user interface."
 msgstr "Nie można wczytać interfejsu użytkownika DCB."
 
-#: ../src/connection-editor/page-dsl.c:203
+#: ../src/connection-editor/page-dsl.c:222
 msgid "Could not load DSL user interface."
 msgstr "Nie można wczytać interfejsu użytkownika DSL."
 
-#: ../src/connection-editor/page-dsl.c:298
+#: ../src/connection-editor/page-dsl.c:323
 msgid "missing parent interface"
 msgstr "brak interfejsu nadrzędnego"
 
-#: ../src/connection-editor/page-dsl.c:343
+#: ../src/connection-editor/page-dsl.c:368
 #, c-format
 msgid "DSL connection %d"
 msgstr "Połączenie DSL %d"
